# dev-meetup-rust-up

./: .gitignore  README.md
cc-factorial/: .gitignore  CMakeLists.txt  cc_factorial.cpp  cc_factorial.h  main.cpp
ffi-cc-from-rust/: .gitignore  Cargo.toml
ffi-cc-from-rust/.cargo/: config
ffi-cc-from-rust/src/: main.rs
ffi-rust-from-cc/: .gitignore  CMakeLists.txt  main.cpp
rust-factorial/: .gitignore  Cargo.toml
rust-factorial/src/: lib.rs
rust-shapes/: Cargo.toml
rust-shapes/src/: lib.rs
vagrant-virtualbox/: .gitignore  Vagrantfile  config.yml  hosts  setup-ide.sh  setup.yml
vagrant-virtualbox/roles/abaez.rustup/meta/: .galaxy_install_info
vagrant-virtualbox/roles/abaez.rustup/tasks/: autocomplete.yml  main.yml
vagrant-virtualbox/roles/base/defaults/: main.yml
vagrant-virtualbox/roles/base/handlers/: main.yml
vagrant-virtualbox/roles/base/tasks/: apt.yml  main.yml  sysctl.yml  system.yml
vagrant-virtualbox/roles/base/templates/: apt_cache.j2  network-interfaces  profile-proxy.sh  proxy_local.sh  tinyproxy.conf.j2
vagrant-virtualbox/roles/workspaces/defaults/: main.yml
vagrant-virtualbox/roles/workspaces/handlers/: main.yml
vagrant-virtualbox/roles/workspaces/tasks/: main.yml
vagrant-virtualbox/roles/workspaces/tests/: test.yml
vagrant-virtualbox/roles/workspaces/vars/: main.yml
